import from bitbucket

--- a/index.html
+++ b/index.html
@@ -66,13 +66,13 @@
 							
 							-->
 							<ul>
-								<li><a href="index.html#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Intro</span></a></li>
-								<li><a href="index.html#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-th">Portfolio</span></a></li>
-								<li><a href="index.html#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-user">About Us</span></a></li>
-								<li><a href="index.html#assess" id="assess-link" class="skel-panels-ignoreHref"><span class="fa fa-book">Assessment &amp; Selection</span></a></li>
-								<li><a href="index.html#leader" id="leader-link" class="skel-panels-ignoreHref"><span class="fa fa-book">Leadership &amp; Management</span></a></li>
-								<li><a href="index.html#coaching" id="coaching-link" class="skel-panels-ignoreHref"><span class="fa fa-book">Career Management</span></a></li>
-								<li><a href="index.html#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>
+								<li><a href="#top" id="top-link" class="skel-panels-ignoreHref"><span class="fa fa-home">Intro</span></a></li>
+								<li><a href="#portfolio" id="portfolio-link" class="skel-panels-ignoreHref"><span class="fa fa-th">Portfolio</span></a></li>
+								<li><a href="#about" id="about-link" class="skel-panels-ignoreHref"><span class="fa fa-user">About Us</span></a></li>
+								<li><a href="#assess" id="assess-link" class="skel-panels-ignoreHref"><span class="fa fa-book">Assessment &amp; Selection</span></a></li>
+								<li><a href="#leader" id="leader-link" class="skel-panels-ignoreHref"><span class="fa fa-book">Leadership &amp; Management</span></a></li>
+								<li><a href="#coaching" id="coaching-link" class="skel-panels-ignoreHref"><span class="fa fa-book">Career Management</span></a></li>
+								<li><a href="#contact" id="contact-link" class="skel-panels-ignoreHref"><span class="fa fa-envelope">Contact</span></a></li>
 							</ul>
 						</nav>
 						
@@ -112,7 +112,7 @@
 								<div class="row">
 									<div class="12u">
 										<article class="item">
-											<a href="index.html#top" class="image"><img src="images/magnify.jpg" alt="" /></a>
+											<a href="#top" class="image"><img src="images/magnify.jpg" alt="" /></a>
 										</article>
 									</div>
 								</div>
@@ -150,7 +150,7 @@
 							<div class="row">
 								<div class="4u">
 									<article class="item">
-										<a href="index.html#portfolio" class="image full"><img src="images/square_peg_in_round_hole.jpg" alt="Square peg, round hole" /></a>
+										<a href="#portfolio" class="image full"><img src="images/square_peg_in_round_hole.jpg" alt="Square peg, round hole" /></a>
 										<header>
 											<h3>LEADERSHIP &amp; MANAGEMENT DEVELOPMENT – matching your people to the right roles</h3>
 										</header>
@@ -158,7 +158,7 @@
 								</div>
 								<div class="4u">
 									<article class="item">
-										<a href="index.html#portfolio" class="image full"><img src="images/job_dart_board.jpg" alt="" /></a>
+										<a href="#portfolio" class="image full"><img src="images/job_dart_board.jpg" alt="" /></a>
 										<header>
 											<h3>CAREER MANAGEMENT – coaching and mentoring professionals to the next level</h3>
 										</header>
@@ -166,7 +166,7 @@
 								</div>
 								<div class="4u">
 									<article class="item">
-										<a href="index.html#portfolio" class="image full"><img src="images/phrenology_head.jpg" alt="Square peg, round hole" /></a>
+										<a href="#portfolio" class="image full"><img src="images/phrenology_head.jpg" alt="Square peg, round hole" /></a>
 										<header>
 											<h3>TALENT ASSESSMENT &amp; SELECTION – identifying the right behaviours, knowledge, skills and characteristics to select the right person for the job</h3>
 										</header>
@@ -216,7 +216,7 @@
 							<div class="row">
 								<div class="12u">
 									<article class="item">
-										<a href="index.html#assess" class="image full"><img src="images/usual-suspects.jpg" alt="" /></a>
+										<a href="#assess" class="image full"><img src="images/usual-suspects.jpg" alt="" /></a>
 									</article>
 								</div>
 							</div>
@@ -281,7 +281,7 @@
                             	<div class="row">
 									<div class="12u">
 										<article class="item">
-											<a href="index.html#leader" class="image full"><img src="images/kenburns1.jpg" alt=""></a>
+											<a href="#leader" class="image full"><img src="images/kenburns1.jpg" alt=""></a>
 										</article>
 									</div>
 								</div>
@@ -324,12 +324,12 @@
 							<div class="row">
 								<div class="6u">
 									<article class="item">
-										<a href="index.html#coaching" class="image full"><img class="image left" src="images/compass.jpg" alt="Career Management" /></a>
+										<a href="#coaching" class="image full"><img class="image left" src="images/compass.jpg" alt="Career Management" /></a>
 									</article>
 								</div>
 								<div class="6u">
 									<article class="item">
-										<a href="index.html#coaching" class="image full"><img class="image left" src="images/career_lightbulb.jpg" alt="Career Lightbulb" /></a>
+										<a href="#coaching" class="image full"><img class="image left" src="images/career_lightbulb.jpg" alt="Career Lightbulb" /></a>
 									</article>
 								</div>
 							</div>
@@ -373,7 +373,7 @@
 									<div class="2u">Image verification</div>
 									<div class="2u"><img src="http://www.emailmeform.com/turing.php" id="captcha" alt="captcha" class="10u"></div>
 									<div class="8u">
-										<input type="text" class="text" placeholder="Please enter the text from the image" name="Turing" value="" maxlength="100" size="10"> [ <a class="sm" href="robots.txt#" onclick=" document.getElementById('captcha').src = document.getElementById('captcha').src + '?' + (new Date()).getMilliseconds()">Refresh Image</a> ] [ <a class="sm" href="http://www.emailmeform.com/?v=turing&amp;pt=popup" onClick="window.open('http://www.emailmeform.com/?v=turing&amp;pt=popup','_blank','width=400, height=500, left=' + (screen.width-450) + ', top=100');return false;">What's This?</a> ]
+										<input type="text" class="text" placeholder="Please enter the text from the image" name="Turing" value="" maxlength="100" size="10"> [ <a class="sm" href="#" onclick=" document.getElementById('captcha').src = document.getElementById('captcha').src + '?' + (new Date()).getMilliseconds()">Refresh Image</a> ] [ <a class="sm" href="http://www.emailmeform.com/?v=turing&amp;pt=popup" onClick="window.open('http://www.emailmeform.com/?v=turing&amp;pt=popup','_blank','width=400, height=500, left=' + (screen.width-450) + ', top=100');return false;">What's This?</a> ]
 									  	<input type="text" name="hida2" value="" maxlength="100" size="3" style="display : none;">
 								    </div>
 								</div>
