add link to gunthorpe services ltd.

--- a/index.html
+++ b/index.html
@@ -399,6 +399,7 @@
 						<p>&copy; 2014-2016 Selectif. All rights reserved.</p>
 						<ul class="menu">
 							<li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+							<li>Development: <a href="http://gslimited.co.uk/">Gunthorpe Services Ltd.</a></li>
 						</ul>
 					</div>
 				
