law society scotland update

--- a/index.html
+++ b/index.html
@@ -92,22 +92,72 @@
 
 		<!-- Main -->
 			<div id="main">
-			
+
+				<section id="top" class="zero">
+					<div class="container">
+						<header>
+							<br/>
+							<img src="images/selectif_100.gif" alt="" />
+
+							<br/>
+						</header>
+
+						<p>Hello, welcome, and thank you for visiting!</p>
+
+						<p>Are you someone who believes you have the knowledge, skills and attributes to
+							make a capable <font style="color: black; font-weight: bold;">legal leader</font> BUT you struggle to evidence your potential?</p>
+
+						<p>Have others given you encouragement and faith in your abilities – possibly more
+						than you have in yourself?</p>
+
+						<p>And do you instinctively feel that you have reached a point in your career where
+							having purpose in your role has come to the fore?</p>
+
+						<p><font style="color: #009ddc; font-weight: bold;">If.</font> You’ve received positive external feedback from trusted individuals and consider
+							yourself a <font style="font-style: italic;">Competent Contender</font> for <font style="color: black; font-weight: bold;">judicial/public appointment</font> then it’s possible
+							that the time has come for exploring the next phase of your career.</p>
+
+						<p>Perhaps you need to:
+						<ul>
+						<li><font style="color: black; font-weight: bold;">-</font> tackle inaccurate limiting beliefs,</li>
+						<li><font style="color: black; font-weight: bold;">-</font> silence the negative self talk, and</li>
+						<li><font style="color: black; font-weight: bold;">-</font> address the imposter syndrome</li>
+						</ul>
+						....before you feel ready to give it your best shot?</p>
+
+						<p>A change in direction necessitates a growth mindset first and foremost - you’ll never
+						know what you are truly capable of achieving unless you display the courage to
+							‘throw your hat in the ring’.</p>
+
+						<p>And <font style="color: #009ddc; font-weight: bold;">If.</font> you:<br/><br/>
+						a) don’t know how /where to start, or<br/>
+						b) have made a start, but have hit a brick wall,<br/>
+						<br/>
+						. . . then anonymous peer support (monthly online, interactive, facilitated networking
+						on leadership development topics) and/or 1-2-1career coaching with me may help
+						you move forward with your leadership goals and aspirations. As a former JAC &amp;
+						Welsh Government independent/lay assessor and ex-HR practitioner, I have first
+						hand experience of participating in selection panels. And as a business psychologist
+						specialising in leadership assessment, selection and development (I’m also an
+						executive and career coach, trainer/facilitator), I’m well placed to support your
+							growth toward your future career destination.</p>
+
+						<p>Register your interest below to improve your chances of selection in judicial/public
+							appointments and leadership roles.</p>
+
+						<p>Membership will be launching June 2020, giving you access to valuable resources,
+							networking and grow with peers to help you along your career journey.</p>
+
+						<p><font style="color: blue;">(CLICK HERE TO REGISTER)</font> <a href="https://manjulabray.co.uk/law-society-scotland.html"><font style="color: blue;">https://manjulabray.co.uk/law-society-scotland.html</font></a></p>
+					</div>
+				</section>
+
 				<!-- Intro -->
 					<section id="top" class="one">
 						<div class="container">
 
-<!--
 							<header>
 								<br/>
-								<img src="images/selectif_100.gif" alt="" />
-								<img src="images/magnify.jpg" alt="" style="padding:0px 30px" />
-								<h2 class="alt">Business Psychology &amp; Career Management</h2>
-							</header>
--->
-							<header>
-								<br/>
-								<img src="images/selectif_100.gif" alt="" />
 
 								<div class="row">
 									<div class="12u">
