--- a/index.html
+++ b/index.html
@@ -11,6 +11,19 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!-- favicons -->
+		<!-- generics -->
+		<link rel="icon" href="images/favicon32.png" sizes="32x32">
+		<link rel="icon" href="images/favicon128.png" sizes="128x128">
+		<link rel="icon" href="images/favicon192.png" sizes="192x192">
+
+		<!-- Android -->
+		<link rel="shortcut icon" href="images/favicon196.png" sizes="196x196">
+
+		<!-- iOS -->
+		<link rel="apple-touch-icon" href="images/favicon152.png" sizes="152x152">
+		<link rel="apple-touch-icon" href="images/favicon167.png" sizes="167x167">
+		<link rel="apple-touch-icon" href="images/favicon180.png" sizes="180x180">
 	</head>
 	<body class="is-preload">
 
